package enums;

public enum LockerSize {
    SMALL, MEDIUM, LARGE ,XL
}